TA-442 Add endpoint for getting project contractors jobs data
